[backend] fix(security): add test and review process (#1782)